--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                 </div>
             </div>
             <div class="avatar">
-                <img src="./photo/IMG_4333.png" alt="">
+                <img src="IMG_4333.png" alt="">
             </div>
         </div>
 </body>
